welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: missing parameter type
  if (a=>13 && a<=19){
      ^countTeen:3: error: value && is not a member of Int
  if (a=>13 && a<=19){
            ^countTeen:6: error: missing parameter type
  if (b=>13 && b<=19){
      ^countTeen:6: error: value && is not a member of Int
  if (b=>13 && b<=19){
            ^countTeen:9: error: missing parameter type
  if (c=>13 && c<=19){
      ^countTeen:9: error: value && is not a member of Int
  if (c=>13 && c<=19){
            ^countTeen:12: error: missing parameter type
  if (d=>13 && d<=19){
      ^countTeen:12: error: value && is not a member of Int
  if (d=>13 && d<=19){
            ^